@@ -37,6 +37,18 @@ href="http://www.gnu.org/software/gdb/">GNU Debugger</a> support GCJ
 <!-- News entries start here -->
 
 <dl class="news">
+<dt>September 11, 2006</dt>
+<dd>Joel Dice has
+<a
+href="http://gcc.gnu.org/ml/java/2006-09/msg00020.html">announced</a> <a
+href="http://ulibgcj.sourceforge.net/status.html">micro-libgcj
+0.1</a>, a lightweight version of libgcj intended to provide a usable
+subset of Java's features while remaining small and self-contained.
+This release fixes compatibility issues present in the initial 0.0
+release and adds
+optional <a href="http://ulibgcj.sourceforge.net/uswt.html">SWT
+support</a>.</dd>
+
 <dt>June 13, 2006</dt>
 <dd>The May 2006 issue of Linux Journal contains the article &quot;<a
 href="http://www.linuxjournal.com/article/8757">Embedded Java with
