@@ -1,3 +1,7 @@
+2006-09-29  Joel Dice  <dicej@mailsnare.net>
+
+	* index.html: Mention micro-libgcj release.
+
 2006-07-02  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* index.html: Shorten introduction.  Rotate some news...
